Resolves: fdo#39793 open the 'Font' tab after Set Language ... More ...

Change-Id: I23c80a462ef473defe5536f9090167ae734553b7